<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            style="@style/styleToolbar"
            android:layout_height="?attr/actionBarSize" >

            <TextView
                android:id="@+id/title_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instagram"
                android:textSize="22sp"
                android:maxLines="1"
                android:fontFamily="@font/pacifico"
                android:textColor="@android:color/black" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/post_count"
        android:layout_width="38dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_postan"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/followers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_polower"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/post_count" />

    <TextView
        android:id="@+id/following_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_polowing"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/post_count" />

    <TextView
        android:id="@+id/txt_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_posts"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="@+id/post_count"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="@+id/post_count"
        app:layout_constraintTop_toTopOf="@+id/post_count" />

    <TextView
        android:id="@+id/txt_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_followers"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="@+id/followers_count"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/followers_count"
        app:layout_constraintTop_toTopOf="@+id/txt_post" />

    <TextView
        android:id="@+id/txt_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_following"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="@+id/following_count"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/following_count"
        app:layout_constraintTop_toTopOf="@+id/txt_post" />

    <Button
        android:id="@+id/btn_profil"
        android:layout_width="153dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txt_followers" />

    <TextView
        android:id="@+id/txt_nama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Nama"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_profil" />

    <TextView
        android:id="@+id/txt_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Bio Data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nama" />


</androidx.constraintlayout.widget.ConstraintLayout>